Fix overflow in smaller screens

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,7 @@
   max-height: 100vh;
   background-color: #1E1E1E;
   color:white;
+  overflow: hidden;
 }
 
 .page-header{
