--- a/src/Component/FileSections/FileSection.css
+++ b/src/Component/FileSections/FileSection.css
@@ -1,5 +1,6 @@
 .file-section {
     width: 100%;
+    flex:1;
 }
 .file-section-header {
     background-color: #252526;
